@@ -1,3 +1,8 @@
+2011-12-22 belangeo <belangeo@gmail.com>
+
+    * Added new object: MToT. Midi to transposition factor conversion.
+    - rev 805
+
 2011-12-20 belangeo <belangeo@gmail.com>
 
     * Added new objects: XnoiseDur,  Recursive time varying X-class pseudo-random generator. SincTable, sinc window function.
